added second collection and fixed validation issues
